--- a/class_calismasi/test.ipynb
+++ b/class_calismasi/test.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
-    "    \n",
-    "    def __init__(self, *args, **kwargs):\n",
+    "\n",
+    "    def __init__(self):\n",
     "        pass\n",
-    "    \n",
-    "    def getFullName(self):\n",
-    "        return self.firstName + \" \" + self.lastName"
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.firstName} {self.lastName}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buğra Durmuş\n"
+     ]
+    }
+   ],
    "source": [
-    "print(p1.getFullName())"
+    "print(p1)"
    ]
   }
  ],
