--- a/lab_odev_01/main.ipynb
+++ b/lab_odev_01/main.ipynb
@@ -33,14 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "girdi: 6.0, toplam: 5.8125\n"
+      "girdi: 3.0\n",
+      "toplam: 2.625\n"
      ]
     }
    ],
@@ -52,14 +53,45 @@
     "\n",
     "print(f\"girdi: {n}\")\n",
     "\n",
+    "i = n\n",
     "s = 0\n",
     "\n",
-    "while n > 0:\n",
+    "while i > 0:\n",
     "    n /= 2\n",
+    "    i -= 1\n",
     "    if n > 0.1:\n",
     "        s += n\n",
     "\n",
     "print(f\"toplam: {s}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.890625\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bolenleri_topla(sayi):\n",
+    "    toplam = 0\n",
+    "    sayac = sayi\n",
+    "    \n",
+    "    while sayac > 0:\n",
+    "        sayi /= 2\n",
+    "        sayac-=1\n",
+    "        if sayi > 0.1:\n",
+    "            toplam += sayi\n",
+    "    \n",
+    "    return toplam\n",
+    "\n",
+    "print(bolenleri_topla(7))"
    ]
   },
   {
