--- a/lab_04/main.ipynb
+++ b/lab_04/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,13 @@
      "output_type": "stream",
      "text": [
       "Mrhb bn brhm. nstgrmd 14 bn tkpçm vr.\n",
-      "yrc Rs f Kngdmst 200 mlyn ....\n"
+      "yrc Rs f Kngdmst 200 mlyn gcm blnmkt.\n"
      ]
     }
    ],
    "source": [
     "v = \"aeıioöuüAEIİOÖUÜ\"\n",
-    "s = \"Merhaba ben İbrahim. İnstagramda 14 bin takipçim var.\\nAyrıca Rise Of Kingdomsta 200 milyon ....\"\n",
+    "s = \"Merhaba ben İbrahim. İnstagramda 14 bin takipçim var.\\nAyrıca Rise Of Kingdomsta 200 milyon gücüm bulunmakta.\"\n",
     "\n",
     "for item in v:\n",
     "    s = s.replace(item, '')\n",
