--- a/lab_04/main.ipynb
+++ b/lab_04/main.ipynb
@@ -40,7 +40,7 @@
    ],
    "source": [
     "v = \"aeıioöuüAEIİOÖUÜ\"\n",
-    "s = \"Merhaba ben İbrahim. İnstagramda 14 bin takipçim var.\\nAyrıca Rise Of Kingdomsta 200 milyon gücüm bulunmakta.\"\n",
+    "s = \"Merhaba ben İbrahim. İnstagramda 14 bin takipçim var.\\nAyrıca Rise Of Kingdomsta 200 milyon savaş gücüm bulunmakta.\"\n",
     "\n",
     "for item in v:\n",
     "    s = s.replace(item, '')\n",
