--- a/lab_04/main.ipynb
+++ b/lab_04/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
      "output_type": "stream",
      "text": [
       "Mrhb bn brhm. nstgrmd 14 bn tkpçm vr.\n",
-      "yrc Rs f Kngdmst 200 mlyn gcm blnmkt.\n"
+      "yrc Rs f Kngdmst 200 mlyn svş gcm blnmkt.\n"
      ]
     }
    ],
