--- a/lab_06/main.ipynb
+++ b/lab_06/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
       "['trabzon', ['samsun', 'adana', 'ordu'], 5, 3, [2, 1, 3]]\n",
       "\n",
       "['TRABZON', ['samsun', 'ADANA', 'ordu'], 5, 3, [2, 1, 3], 'KAHRAMANMARAŞ']\n",
-      "['trabzon', ['samsun', 'adana', 'ordu'], 5, 3, [2, 1, 3]]\n"
+      "['trabzon', ['samsun', 'ADANA', 'ordu'], 5, 3, [2, 1, 3]]\n"
      ]
     }
    ],
