--- a/lab_06/main.ipynb
+++ b/lab_06/main.ipynb
@@ -77,10 +77,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: {'isim': 'Ahmet', 'sehir': 'Kastamonu', 'bolum': 'Bilgisayar'}, 2: {'isim': 'Kemal', 'sehir': 'Sinop', 'bolum': 'Yazılım'}, 3: {'isim': 'Aylin', 'sehir': 'Mersin', 'bolum': 'Yazılım'}, 4: {'isim': 'Gizem', 'sehir': 'Kahramanmaraş', 'bolum': 'Tıp'}}\n",
+      "\n",
+      "1 no'lu öğrenci\n",
+      "\n",
+      "\tisim:Ahmet\n",
+      "\tsehir:Kastamonu\n",
+      "\tbolum:Bilgisayar\n",
+      "\n",
+      "2 no'lu öğrenci\n",
+      "\n",
+      "\tisim:Kemal\n",
+      "\tsehir:Sinop\n",
+      "\tbolum:Yazılım\n",
+      "\n",
+      "3 no'lu öğrenci\n",
+      "\n",
+      "\tisim:Aylin\n",
+      "\tsehir:Mersin\n",
+      "\tbolum:Yazılım\n",
+      "\n",
+      "4 no'lu öğrenci\n",
+      "\n",
+      "\tisim:Gizem\n",
+      "\tsehir:Kahramanmaraş\n",
+      "\tbolum:Tıp\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = dict()\n",
+    "\n",
+    "d[1] = {\"isim\": \"Ahmet\", \"sehir\": \"Kastamonu\", \"bolum\": \"Bilgisayar\"}\n",
+    "d[2] = {\"isim\": \"Kemal\", \"sehir\": \"Sinop\", \"bolum\": \"Yazılım\"}\n",
+    "d[3] = {\"isim\": \"Aylin\", \"sehir\": \"Mersin\", \"bolum\": \"Yazılım\"}\n",
+    "d[4] = {\"isim\": \"Gizem\", \"sehir\": \"Kahramanmaraş\", \"bolum\": \"Tıp\"}\n",
+    "\n",
+    "print(d)\n",
+    "print()\n",
+    "\n",
+    "for k1 in d.keys():\n",
+    "    print(f\"{k1} no'lu öğrenci\\n\")\n",
+    "    for k2 in d[k1].keys():\n",
+    "        print(f\"\\t{k2}:{d[k1][k2]}\")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
