--- a/lab_06/main.ipynb
+++ b/lab_06/main.ipynb
@@ -130,6 +130,92 @@
     "        print(f\"\\t{k2}:{d[k1][k2]}\")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function sayhello in module __main__:\n",
+      "\n",
+      "sayhello(name)\n",
+      "    bu fonk. tek parametre alır.\n",
+      "    girilen kişiye merhaba der.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    bu fonk. tek parametre alır.\\n    girilen kişiye merhaba der.\\n    '"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sayhello(name):\n",
+    "    \"\"\"\n",
+    "    bu fonk. tek parametre alır.\n",
+    "    girilen kişiye merhaba der.\n",
+    "    \"\"\"\n",
+    "    print(f\"Hello {name}!\")\n",
+    "    \n",
+    "help(sayhello)\n",
+    "sayhello.__doc__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_divisible_by_2_or_3(x):\n",
+    "    \"\"\"\n",
+    "    >>> is_divisible_by_2_or_3(2)\n",
+    "    True\n",
+    "    >>> is_divisible_by_2_or_3(5)\n",
+    "    False\n",
+    "    >>> is_divisible_by_2_or_3(3)\n",
+    "    True\n",
+    "    \"\"\"\n",
+    "    return x % 2 == 0 or x % 3 == 0\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    import doctest\n",
+    "    doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', ['ab', 'd']]\n",
+      "['c', 'b', ['ab', 'd']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [\"a\", \"b\", [\"ab\", \"ba\"]]\n",
+    "lst2 = lst1[:]  # shallow\n",
+    "lst2[0] = \"c\"\n",
+    "lst2[2][1] = \"d\"\n",
+    "\n",
+    "print(lst1)\n",
+    "print(lst2)"
+   ]
   }
  ],
  "metadata": {
